--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "moment": "^2.29.4",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
