--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
